@@ -1,6 +1,6 @@
 {
-    "version": "3.6.0.30",
+    "version": "3.6.0.31",
     "versionFriendly": "3.6.0",
-    "versionSp": "Beta10",
+    "versionSp": "Beta11",
     "appID": "a4d6de0f-18b0-4aae-9338-86a333563b98"
 }
